<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/containMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/calc_horizontal_margin"
    android:paddingStart="@dimen/calc_horizontal_margin"
    android:paddingTop="@dimen/calc_vertical_margin"
    android:paddingBottom="@dimen/calc_vertical_margin"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_backspace_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_input_heigh"
            android:hint="@string/calc_input_hint"
            android:gravity="end|center"
            android:inputType="none"
            android:cursorVisible="true"
            android:maxLength="16"
            android:drawablePadding="16dp"
            />

        <!-- android:textIsSelectable="false"
         android:textIsSelectable="true"
         android:drawableEnd="@drawable/ic_backspace_black"
         app:endIconCheckable="true" -->


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llMainLeft"
        android:layout_width="@dimen/calc_btn_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tilInput">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:theme="@style/ButtonMD"
            android:text="@string/calc_btn_seven"/>

        <Button
            android:id="@+id/btnFour"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:theme="@style/ButtonMD"
            android:text="@string/calc_btn_four"/>

        <Button
            android:id="@+id/btnOne"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:theme="@style/ButtonMD"
            android:text="@string/calc_btn_one"/>
        <Button
            android:id="@+id/btnPoint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:theme="@style/ButtonMDDark"
            android:text="@string/calc_btn_point"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMaiRight"
        android:layout_width="@dimen/calc_btn_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tilInput"
        android:layout_toEndOf="@id/llMainLeft">

        <Button
            android:id="@+id/btnEight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:theme="@style/ButtonMD"
            android:text="@string/calc_btn_eight"/>

        <Button
            android:id="@+id/btnFive"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:theme="@style/ButtonMD"
            android:text="@string/calc_btn_five"/>

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:theme="@style/ButtonMD"
            android:text="@string/calc_btn_two"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:theme="@style/ButtonMD"
            android:text="@string/calc_btn_zero"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlOperators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilInput"
        android:layout_toEndOf="@id/llMaiRight">

        <Button
            android:id="@+id/btnNine"
            android:layout_width="@dimen/calc_btn_size"
            android:layout_height="@dimen/calc_btn_size"
            android:theme="@style/ButtonMD"
            android:text="@string/calc_btn_nine"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/btnClean"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:theme="@style/ButtonMDRed"
            android:text="@string/calc_btn_clear"
            android:layout_toEndOf="@id/btnNine"/>

        <LinearLayout
            android:id="@+id/llMiddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/btnNine">

            <Button
                android:id="@+id/btnSix"
                android:layout_width="@dimen/calc_btn_size"
                android:layout_height="@dimen/calc_btn_size"
                android:theme="@style/ButtonMD"
                android:text="@string/calc_btn_six"/>

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="@dimen/calc_btn_size"
                android:theme="@style/ButtonMDDark"
                android:layout_weight="50"
                android:text="@string/calc_btn_div"/>

            <Button
                android:id="@+id/btnMultiplication"
                android:layout_width="0dp"
                android:layout_height="@dimen/calc_btn_size"
                android:theme="@style/ButtonMDDark"
                android:layout_weight="50"
                android:textAllCaps="false"
                android:text="@string/calc_btn_multi"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/llMiddle">

            <Button
                android:id="@+id/btnThree"
                android:layout_width="@dimen/calc_btn_size"
                android:layout_height="@dimen/calc_btn_size"
                android:theme="@style/ButtonMD"
                android:text="@string/calc_btn_three"/>

            <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="@dimen/calc_btn_size"
                android:theme="@style/ButtonMDDark"
                android:layout_weight="50"
                android:text="@string/calc_btn_sub"/>

            <Button
                android:id="@+id/btnSum"
                android:layout_width="0dp"
                android:layout_height="@dimen/calc_btn_size"
                android:theme="@style/ButtonMDDark"
                android:layout_weight="50"
                android:text="@string/calc_btn_sum"/>


        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/btnResult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calc_btn_size"
        android:theme="@style/ButtonMDDarker"
        android:layout_below="@id/rlOperators"
        android:layout_toEndOf="@id/llMaiRight"
        android:text="@string/calc_btn_result"
        />

</RelativeLayout>